# cmake_playground

./: .gitmodules  README.md
ep2/: README.md
ep2/lala/: gan.lala  hello.cpp  makefile
ep2/test/: CMakeLists.txt  main.cpp
ep3/: README.md
ep3/somelib/: CMakeLists.txt
ep3/test/: CMakeLists.txt  main.cpp
ep4/: README.md
ep4/somelib/: gan.h
ep4/test/: CMakeLists.txt  fuck.h.in  main.cpp
ep5/: CMakeLists.txt  haha.h.in  main.cpp
ep5/gan/: gan.cpp
ep6/: CMakeLists.txt  haha.h.in
ep6/wtf/: CMakeLists.txt
